--- a/pages/message/message.wxml
+++ b/pages/message/message.wxml
@@ -4,7 +4,7 @@
           <view class="messageTime">{{item.messageTime}}</view>
           <view class="messageCon">
               <view class="messageH3">{{item.messageH3}}</view>
-              <view class="messageP">{{item.messageP}}</view>
+              <view class="messageP">￥{{item.messageP}}</view>
           </view>
       </view>
     </block>
