--- a/pages/motuoshow/motuoshow.wxss
+++ b/pages/motuoshow/motuoshow.wxss
@@ -4,10 +4,11 @@
 
 .carshowbanner{
   position: relative;
+  padding-top: 5em;
 }
 .carshowbanner .img image{
   width: 100%;
-  height: 20em;
+  height: 15em;
 }
 
 .carshowbanner .img .img2{
@@ -20,9 +21,9 @@
   transform: translate(-50%,0);
 }
 
-.introduce{
+/* .introduce{
   margin-top: 7.2em;
-}
+} */
 .introduce .h1{
   font-size:1.5em;
   font-weight: bold;
@@ -60,12 +61,14 @@
   border: 1px solid #eee;
 }
 .carshowCard .item .img image{
-  width: 5em;
-  height: 5em;
+  width: 3em;
+  height: 3em;
+  padding: 1em;
 }
 .carshowCard .item text{
   display: block;
   margin: 0.75em 0;
+  font-size: 0.8em;
 }
 .carparameter{
   padding: 0.75em;
@@ -165,5 +168,17 @@
     background: #eee;
     margin: 0.5em 0;
 }
+
+
+
+
+
+
+
+
+
+
+
+
 
 
